# agencia

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  reviewtasks.csv
.claude/epics/: langgraph-vs-crewai-evaluation-prd.md  pluggable-data-retrieval-architecture-prd.md  stack-modernization-prd.md
.github/workflows/: aws.yml  test.yml
app/: db.py  errors.py  graph.py  ibge_cities_code.json  llm.py  nodes.py  server.py  state.py  store.py
app/crew/: agents.py  crew.py  errors.py  tools.py
app/data/: querido_diario_glossario_context.txt
app/middleware/: auth_middleware.py
app/nodes/: factcheck_lookup.py  online_research.py  questions.py  report.py  router.py  source_selection.py
app/plugins/: __init__.py  base.py  registry.py  source_selector.py
app/tools/: gazette_deep_search.py  gazette_search.py  querido_diario.py  querido_diario_search.py  web_search.py
app/utils/: llm_retry.py
deployment/: app.yml
docs/plans/: 2026-02-17-gazette-search-accuracy-design.md  2026-02-17-plugin-expansion-phase3-design.md  2026-02-17-plugin-expansion-phase3-plan.md  2026-02-17-source-selection-confidence-design.md  2026-02-17-source-selection-confidence-plan.md
querido_diario_crew/: crew.py  main.py  querido_diario_search_context.txt
querido_diario_crew/config/: agents.yaml  tasks.yaml
scripts/: create_claim_synt_dataset.ipynb
tests/: conftest.py  run_e2e.py  test_execution_store.py  test_gazette_accuracy.py  test_graph_integration.py  test_phase1_foundation.py  test_streaming.py
(+53 files in other folders)
