[project]
name = "agencia"
version = "2.0.0"
description = "Aletheia automated fact-checking agent using LangGraph"
authors = [{name = "Joao Pedro Batista", email = "jpsantos@aletheiafact.org"}]
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
